welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:1: error: Missing closing brace `}' assumed here
var i=0
^MethodsDogHouse:2: error: expected class or object definition
var j=0
^MethodsDogHouse:3: error: expected class or object definition
var k=0
^MethodsDogHouse:4: error: expected class or object definition
def DogHouse()
^MethodsDogHouse:5: error: expected class or object definition
{
^